<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_additional_pane"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:background="#000000"
    android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingEnd="@dimen/forecast_detail_horizontal_padding"

    android:paddingStart="@dimen/forecast_detail_horizontal_padding"
    android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
    app:columnCount="2">

    <TextView
        android:id="@+id/open_price_label"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/data_duration"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#FFFFFF"
        android:contentDescription="@string/data_duration"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/open_price"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/duration_text"
        android:paddingStart="@dimen/forecast_detail_horizontal_padding"
        android:contentDescription="@string/duration_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#FFFFFF"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/high_label"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:contentDescription="@string/high"
        android:text="@string/high"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#FFFFFF"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/high_text"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/chart_content"
        android:paddingStart="@dimen/forecast_detail_horizontal_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#FFFFFF"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/Low_label"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/low"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#FFFFFF"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />


    <TextView
        android:id="@+id/low_text"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text=" "
        android:paddingStart="@dimen/forecast_detail_horizontal_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#FFFFFF"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />
</android.support.v7.widget.GridLayout>